# SchemaShift

./: .gitignore  BUILD_LOG.md  DEPLOY.md  Dockerfile  README.md  TRAINING_LOG.md  __init__.py  client.py  drift.py  eval.py  graders.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py
eval_data/: seeds.json
eval_results/: naive_heuristic_20260421_231319.json  naive_heuristic_20260421_233115.json  naive_heuristic_20260422_003917.json  ollama_gpt-oss_120b_20260422_010712.json  ollama_gpt-oss_120b_20260422_011712.json  policy_aware_5seed_full.json  policy_aware_heuristic_20260421_231324.json  policy_aware_heuristic_20260421_231708.json  policy_aware_heuristic_20260421_233136.json  policy_aware_heuristic_20260422_000422.json  policy_aware_heuristic_20260422_000529.json  policy_aware_heuristic_20260422_000751.json
server/: app.py  environment.py
tests/: test_calendar.py  test_client.py  test_crm.py  test_deploy_smoke.py  test_drift.py  test_environment.py  test_eval.py  test_graders.py  test_mail.py  test_models.py  test_scenarios.py  test_server.py
tools/: base.py  calendar.py  chat.py  crm.py  docs.py  mail.py
training/: STAGE_1_KAGGLE_RUNBOOK.md  grpo_kaggle.ipynb  grpo_smoke.py  train.py
